[WG][APB-10547] Entity checks - deceased check, PR comments

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/entitycheckfailed/CanNotConfirmIdentityPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/entitycheckfailed/CanNotConfirmIdentityPage.scala.html
@@ -36,7 +36,7 @@
     <h1 class="govuk-heading-xl">@pageTitle</h1>
 
     <p class="govuk-body">
-        @Html(messages(s"$key.p1", appConfig.hmrcContactUrl))
+        @Html(messages(s"$key.p1", appConfig.contacHmrctUrl))
     </p>
     <p class="govuk-body">
         @{messages(s"$key.p2")}
