--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/checkfailed/CanNotRegisterPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/checkfailed/CanNotRegisterPage.scala.html
@@ -24,30 +24,24 @@
         govukButton: GovukButton
 )
 
-@()(implicit
+@(entityName: String)(implicit
         request: RequestHeader,
         messages: Messages
 )
 
-@key = @{"companyStatusBlock"}
-@pageTitle = @{messages(s"$key.title")}
+@key = @{"cannotRegister"}
+@pageTitle = @{messages(s"$key.title", entityName)}
 
 @layout(pageTitle = pageTitle) {
     <h1 class="govuk-heading-xl">@pageTitle</h1>
 
     <p class="govuk-body">
-        @{messages(s"$key.p1")}
-    </p>
-    <p class="govuk-body">
-        @Html(messages(s"$key.p2", appConfig.companiesHouseUrl))
-    </p>
-    <p class="govuk-body">
-        @{messages(s"$key.p3")}
+        @Html(messages(s"$key.p1", appConfig.govukStartPageUrl))
     </p>
 
     <p class="govuk-body govuk-!-display-none-print">
     @govukButton(Button(
-        href = Some(AppRoutes.apply.internal.CompaniesHouseStatusController.companyStatusCheck().url),
+        href = Some(AppRoutes.apply.internal.RefusalToDealWithController.check().url),
         classes = "govuk-link",
         content = Text(messages(s"$key.tryAgain.button"))
     ))
