--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/agentdetails/AnswerSummary.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/agentdetails/AnswerSummary.scala.html
@@ -15,6 +15,7 @@
  *@
 
 @import uk.gov.hmrc.agentregistration.shared.agentdetails.AgentDetails
+@import uk.gov.hmrc.agentregistrationfrontend.model.agentdetails.AgentCorrespondenceAddressHelper.*
 
 @this(
   govukSummaryList: GovukSummaryList
