APB-10452 testonly link to remove nino from individual

--- a/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/TestOnlyHubPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/TestOnlyHubPage.scala.html
@@ -17,6 +17,7 @@
 @import uk.gov.hmrc.agentregistrationfrontend.config.AppConfig
 @import uk.gov.hmrc.agentregistrationfrontend.testonly.model.TestOnlyLink
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
+@import uk.gov.hmrc.agentregistrationfrontend.util.RequestSupport.isSignedIn
 
 @this(
         appConfig: AppConfig,
@@ -34,15 +35,19 @@
     pageTitle = "Test Only Hub",
     suppressBackLink = true
 ) {
-    <h1 class="govuk-heading-xl">Test Only Hub</h1>
-    <p class="govuk-body">
-        <ul>
-            <li><a class="govuk-link" href="@AppRoutes.apply.AgentApplicationController.startRegistration">Agent Start Registration</a></li>
-            <li><a class="govuk-link" href="@AppRoutes.testOnly.FastForwardController.show">fast forward links</a></li>
-            <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.showPlaySession">showPlaySession</a></li>
-            <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.showAgentApplication">showAgentApplication</a></li>
-            <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.showProvidedDetails">showProvidedDetails</a></li>
-            <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.makeTestSubmittedApplication()">get-link-id</a></li>
-        </ul>
-    </p>
+  <h1 class="govuk-heading-l">Test Only Hub</h1>
+  <ul class="govuk-list govuk-list--bullet">
+    <li><a class="govuk-link" href="@AppRoutes.apply.AgentApplicationController.startRegistration">
+      Agent Start Registration</a></li>
+    <li><a class="govuk-link" href="@AppRoutes.testOnly.FastForwardController.show">fast forward links</a></li>
+    <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.showPlaySession">showPlaySession</a></li>
+    <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.showAgentApplication">
+      showAgentApplication</a></li>
+    <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.showProvidedDetails">
+      showProvidedDetails</a></li>
+    <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.makeTestSubmittedApplication()">
+      get-link-id</a></li>
+    <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.removeNinoAndDobFromIndividual()">
+      remove Nino from currently signed in Individual</a></li>
+  </ul>
 }
