APB-10652 capture number of key individuals

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/TaskListPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/TaskListPage.scala.html
@@ -158,7 +158,7 @@
                       content = Text(messages(s"$key.lists.details.linkText.$businessTypeKey"))
                   ),
                   status = if(taskListStatus.listDetails.isComplete) complete else incomplete,
-                  href = Some(AppRoutes.apply.listdetails.ListDetailsController.show.url)
+                  href = Some(AppRoutes.apply.listdetails.NumberOfKeyIndividualsController.show.url)
               ),
               TaskListItem(
                   title = TaskListItemTitle(
