--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/LlpStartPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/LlpStartPage.scala.html
@@ -14,6 +14,7 @@
  * limitations under the License.
  *@
 
+@import uk.gov.hmrc.agentregistration.shared.AgentApplication
 @import uk.gov.hmrc.agentregistration.shared.AgentApplicationLlp
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 
@@ -23,7 +24,7 @@
 )
 
 @(
-        agentApplication: AgentApplicationLlp
+        agentApplication: AgentApplication
 )(implicit
         request: RequestHeader,
         messages: Messages
@@ -32,7 +33,12 @@
 @key = @{"llpProvideDetailsStart"}
 @pageTitle = @{messages(s"$key.title")}
 @applicantName = @{agentApplication.getApplicantContactDetails.applicantName.value}
-@applicantBusinessName = @{agentApplication.getBusinessDetails.companyProfile.companyName}
+@applicantBusinessName = @{
+  agentApplication match {
+    case llp: AgentApplicationLlp => llp.getBusinessDetails.companyProfile.companyName
+    case _ => ""
+  }
+}
 
 @layout(pageTitle = pageTitle, suppressBackLink = true) {
     <h1 class="govuk-heading-l">@pageTitle</h1>
