APB-10652 model and forms improvements
Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/listdetails/NumberOfKeyIndividualsPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/listdetails/NumberOfKeyIndividualsPage.scala.html
@@ -18,9 +18,11 @@
 @import uk.gov.hmrc.agentregistration.shared.AgentApplicationLimitedCompany
 @import uk.gov.hmrc.agentregistration.shared.AgentApplicationLlp
 @import uk.gov.hmrc.agentregistration.shared.AgentApplicationSoleTrader
-@import uk.gov.hmrc.agentregistration.shared.lists.RequiredKeyIndividuals
+@import uk.gov.hmrc.agentregistration.shared.lists.NumberOfRequiredKeyIndividuals
 @import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
 @import uk.gov.hmrc.agentregistrationfrontend.forms.NumberOfKeyIndividualsForm
+@import uk.gov.hmrc.agentregistrationfrontend.forms.NumberOfKeyIndividualsForm.HowManyIndividualsOption
+@import uk.gov.hmrc.agentregistrationfrontend.forms.NumberOfKeyIndividualsForm.HowManyIndividualsOption.*
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
 @import uk.gov.hmrc.govukfrontend.views.Implicits.RichInput
@@ -36,40 +38,40 @@
 )
 
 @(
-        form: Form[RequiredKeyIndividuals],
+        form: Form[NumberOfRequiredKeyIndividuals],
         entityName: String
 )(implicit request: AgentApplicationRequest[?], messages: Messages)
 
-@key = @{NumberOfKeyIndividualsForm.key}
-@exactNumberOfOfficialsKey = @{NumberOfKeyIndividualsForm.exactNumberOfOfficialsKey}
-@numberOfOfficialsWhoDealWithTaxKey = @{NumberOfKeyIndividualsForm.numberOfOfficialsWhoDealWithTaxKey}
+@key = @{NumberOfKeyIndividualsForm.howManyIndividualsOption}
+@exactNumberOfOfficialsKey = @{NumberOfKeyIndividualsForm.howManyIndividuals}
+@numberOfOfficialsWhoDealWithTaxKey = @{NumberOfKeyIndividualsForm.howManyIndividualsResponsibleForTaxMatters}
 @title = @{messages(s"$key.title.$businessTypeKey", entityName)}
 @exactNumberOfOfficialsInput = {
-    @govukInput(Input(
-      label = Label(
+@govukInput(Input(
+    label = Label(
         content = Text(messages(s"$exactNumberOfOfficialsKey.label"))
-      ),
-      classes = "govuk-input--width-5"
-    ).withFormField(form(exactNumberOfOfficialsKey)))
+    ),
+    classes = "govuk-input--width-5"
+).withFormField(form(exactNumberOfOfficialsKey)))
 }
 @numberOfOfficialsWhoDealWithTaxInput = {
-  @govukInput(Input(
+@govukInput(Input(
     label = Label(
-      content = Text(messages(s"$numberOfOfficialsWhoDealWithTaxKey.label"))
+        content = Text(messages(s"$numberOfOfficialsWhoDealWithTaxKey.label"))
     ),
     hint = Some(Hint(
-      content = Text(messages(s"$numberOfOfficialsWhoDealWithTaxKey.hint"))
+        content = Text(messages(s"$numberOfOfficialsWhoDealWithTaxKey.hint"))
     )),
     classes = "govuk-input--width-5"
-  ).withFormField(form(numberOfOfficialsWhoDealWithTaxKey)))
+).withFormField(form(numberOfOfficialsWhoDealWithTaxKey)))
 }
 @businessTypeKey = @{
-  request.agentApplication match {
-    case _: AgentApplicationLlp => "LimitedLiabilityPartnership"
-    case _: AgentApplicationLimitedCompany => "LimitedCompany"
-    case _: AgentApplicationSoleTrader => "SoleTrader"
-    case _: AgentApplication.IsPartnership => "Partnership"
-  }
+    request.agentApplication match {
+        case _: AgentApplicationLlp => "LimitedLiabilityPartnership"
+        case _: AgentApplicationLimitedCompany => "LimitedCompany"
+        case _: AgentApplicationSoleTrader => "SoleTrader"
+        case _: AgentApplication.IsPartnership => "Partnership"
+    }
 }
 @layout(
     pageTitle = title,
@@ -78,28 +80,27 @@
     <h2 class="govuk-caption-l">@messages(s"lists.caption.title.$businessTypeKey")</h2>
     @formWithCSRF(action = AppRoutes.apply.listdetails.NumberOfKeyIndividualsController.submit) {
         @govukRadios(Radios(
-          fieldset = Some(Fieldset(
-            legend = Some(Legend(
-              content = Text(title),
-              isPageHeading = true,
-              classes = "govuk-fieldset__legend--l"
-            ))
-          )),
-          hint = Some(Hint(
-            content = Text(messages(s"$key.hint.$businessTypeKey"))
-          )),
-          items = Seq(
-            RadioItem(
-              content = Text(messages(s"$key.fiveOrFewer")),
-              value = Some("FromFiveOrFewer"),
-              conditionalHtml = Some(exactNumberOfOfficialsInput)
-            ),
-            RadioItem(
-              content = Text(messages(s"$key.sixOrMore")),
-              value = Some("FromSixOrMore"),
-              conditionalHtml = Some(numberOfOfficialsWhoDealWithTaxInput)
-            )
-          )
+            fieldset = Some(Fieldset(
+                legend = Some(Legend(
+                    content = Text(title),
+                    isPageHeading = true,
+                    classes = "govuk-fieldset__legend--l"
+                ))
+            )),
+            hint = Some(Hint(
+                content = Text(messages(s"$key.hint.$businessTypeKey"))
+            )),
+            items = HowManyIndividualsOption.values.toSeq.map: option =>
+                RadioItem(
+                    content = Text(messages(s"$key.$option")),
+                    value = Some(option.toString),
+                    conditionalHtml = Some({
+                        option match
+                        case FiveOrLess => exactNumberOfOfficialsInput
+                        case SixOrMore => numberOfOfficialsWhoDealWithTaxInput
+                    }
+                    )
+                )
         ).withFormField(form(key)))
 
         @continueOrSaveForLater()
