APB-10652 capture number of key individuals (#162)
* APB-10652 capture number of key individuals

* APB-10652 remove unneeded extension from enum

* APB-10652 abstract numberFromString mapping

* APB-10652 removed KeyIndividualListSource

* APB-10652 use domain based keys for form

* APB-10652 capture number of key individuals

* wip

* APB-10652 capture number of key individuals

* APB-10652 model and forms improvements

Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

* form fixes

* APB-10652 pr comment fixes

---------

Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>
Co-authored-by: pav <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/LlpStartPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/LlpStartPage.scala.html
@@ -14,6 +14,7 @@
  * limitations under the License.
  *@
 
+@import uk.gov.hmrc.agentregistration.shared.AgentApplication
 @import uk.gov.hmrc.agentregistration.shared.AgentApplicationLlp
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 
