APB-10655 fix multiple h1

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/listdetails/EnterIndividualNameComplexPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/listdetails/EnterIndividualNameComplexPage.scala.html
@@ -73,7 +73,7 @@
     @govukInput(Input(
       label = Label(
         content = Text(messages(s"$key.label.$ordinalKey")),
-        isPageHeading = true,
+        isPageHeading = false,
         classes = "govuk-label--m"
       )
     ).withFormField(form(key)))
